--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "prettier": "^2.3.2"
   },
   "dependencies": {
@@ -23,9 +23,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
-    "joi": "^17.4.2"
+    "joi": "^17.4.2",
+    "node": "^17.1.0"
   },
   "engines": {
-    "node": "14.x"
+    "node": "17.x"
   }
 }
