Installed pg, library to integrate postgres with node. Besides, created a postgres within libs to use pg. Inside user.service.js used the function getConnection to bring data from postgres.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "joi": "^17.4.2",
-    "node": "^17.1.0"
+    "node": "^17.1.0",
+    "pg": "^8.7.1"
   },
   "engines": {
     "node": "17.x"
