Tried to make a post into the DB using library pg-format, to make a query dinamyc.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "faker": "^5.5.3",
     "joi": "^17.4.2",
     "node": "^17.1.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-format": "^1.0.4"
   },
   "engines": {
     "node": "17.x"
