--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "faker": "^5.5.3",
     "joi": "^17.4.2",
     "node": "^17.1.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.12.0-beta.2"
   },
   "engines": {
     "node": "17.x"
